fix home page scrollbars, community page event image position, speaker session page tabs

--- a/projects/commudle-admin/src/app/feature-modules/public-community/components/events/events.component.scss
+++ b/projects/commudle-admin/src/app/feature-modules/public-community/components/events/events.component.scss
@@ -18,7 +18,7 @@
         margin-right: 1rem;
 
         display: flex;
-        align-items: flex-start;
+        align-items: center;
         overflow: hidden;
         img {
           width: 100%;
